--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.562.0",
-    "next": "^16.1.1",
+    "next": "^16.1.1-canary.4",
     "next-themes": "^0.4.6",
     "react": "^19.2.3",
     "react-day-picker": "^9.13.0",
@@ -66,7 +66,7 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19",
     "eslint": "^9.39.2",
-    "eslint-config-next": "^16.1.1",
+    "eslint-config-next": "^16.1.1-canary.4",
     "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
